--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "puppeteer": "^21.6.0"
   }
 }
